@@ -6,7 +6,7 @@
 	],
 	"Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
 	  "smeltedRatio": 1,
 	  "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-bone", "quantity": 50 },
@@ -20,7 +20,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-bone", "quantity": 50 },
@@ -34,7 +34,7 @@
     ],
 	"Simmering": {
 	  "meltingPoint": 200,
-	  "meltingDuration": 110,
+	  "meltingDuration": 24,
 	  "smeltedRatio": 1,
 	  "smeltingType": "bake",
 	  "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-vegetable", "quantity": 50 },
@@ -48,7 +48,7 @@
     ],
 	"Simmering": {
 	  "meltingPoint": 200,
-	  "meltingDuration": 110,
+	  "meltingDuration": 24,
 	  "smeltedRatio": 1,
 	  "smeltingType": "bake",
 	  "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-vegetable", "quantity": 50 },
@@ -62,7 +62,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-vegetable", "quantity": 50 },
@@ -76,7 +76,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-vegetable", "quantity": 50 },
@@ -90,7 +90,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-meat", "quantity": 50 },
@@ -104,7 +104,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-meat", "quantity": 50  },
@@ -118,7 +118,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-meat", "quantity": 50 },
@@ -132,7 +132,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-meat", "quantity": 50 },
@@ -146,7 +146,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-meat", "quantity": 50 },
@@ -160,7 +160,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-meat", "quantity": 50 },
@@ -174,7 +174,7 @@
     ],
     "Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-meat", "quantity": 50 },
@@ -188,7 +188,7 @@
 	],
 	"Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-fish", "quantity": 50 },
@@ -202,7 +202,7 @@
 	],
 	"Simmering": {
       "meltingPoint": 200,
-      "meltingDuration": 110,
+      "meltingDuration": 24,
       "smeltedRatio": 1,
       "smeltingType": "bake",
       "smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-fish", "quantity":  50 },
@@ -216,7 +216,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 200,
-		"meltingDuration": 110,
+		"meltingDuration": 24,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:brothportion-fish", "quantity":  50 },
