@@ -101,6 +101,8 @@ REBALANCING:
 - Compote buffed; requires more ingredients
 - Hardtack & pemmican can be added to soup/stews
 - Lard simmering recipes' meltingDuration cut from 110 seconds to 24 - DONE!!!
+- Broth simmering recipes' meltingDuration cut from 110 seconds to 24 - DONE!!!
+- Gelatin simmering recipes' meltingDuration cut from 450 seconds to 48 - DONE!!!
 
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
